k8s/targets/dev-gcp-asia-southeast1/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
spec:
  tls:
    - hosts:
        - gcp.orchidflow.io
      secretName: portfolio-tls-dev-gcp-asia-southeast1
  rules:
    - host: gcp.orchidflow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 5000
